# ETABS_API

./: .gitignore  CSI API ETABS v1.chm  CSI API ETABS v1.chw  Cálculos.ipynb  Cálculos.py  Espectro.ipynb  README.md  Tables NSR 10.xlsx  Test Memoria.xlsx  pyproject.toml  requirements.txt  utils.py
Model/: Test.$et  Test.EDB  Test.K_I  Test.K_J  Test.K_M  Test.OUT  Test.Y  Test.Y$$  Test.Y00  Test.Y01  Test.Y02  Test.Y03  Test.Y04  Test.Y05  Test.Y06  Test.Y07  Test.Y08  Test.Y09  Test.Y0A  Test.Y0B  Test.Y_  Test.Y_1  Test.ebk  Test.msh
Tables and Reports/: Test Memoria.xlsx  ~$Test Memoria.xlsx
scr/: Calculations.ipynb  Cálculos.ipynb  utils.py
